--- a/youtube/grid.html
+++ b/youtube/grid.html
@@ -6,7 +6,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS gridding</title>
 </head>
-<body>
-    <
+<body  style="padding-bottom: 500px;">
+    <div style="
+        display:grid;
+        grid-template-columns: 100px 100px;">
+        <div style="background-color: lightblue;">div 1</div>
+        <div style="background-color:lightpink;">div 2<p>
+        what text should <p/> </div>
+    </div>
+    
+    <div style="
+        margin-top:20px;
+        display:grid;
+        grid-template-columns: 100px 100px 200px;">
+        <div style="background-color: lightblue;">div 1</div>
+        <div style="background-color:lightpink;">div 2<p>
+        100px <p/> </div>
+        <div style="background-color:lightblue;">200px</div>
+        <div style="background-color: pink;"> Row1 </div>
+    </div>
+    
+    <div style="
+    margin-top:20px;
+        display:grid;
+        grid-template-columns: 100px 1fr;">
+        <div style="background-color: lightblue;">div 1</div>
+        <div style="background-color:lightpink;">1fr </div>
+    </div>
+
+    <div style="
+    margin-top:20px;
+        display:grid;
+        grid-template-columns: 100px 1fr 1fr;">
+        <div style="background-color: lightblue;">div 1</div>
+        <div style="background-color:lightpink;">2fr </div>
+        <div style="background-color: lightblue;">div 1 fr</div>
+    </div>
+
+
+    <div style="
+    margin-top:20px;
+        display:grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        column-gap:20px;
+        row-gap:40px;
+        ">
+        <div style="background-color: lightblue;height:200px">1fr</div>
+        <div style="background-color:lightpink;height:200px">1fr </div>
+        <div style="background-color: lightblue; height:200px">1 fr</div>
+        <div style="background-color:lightpink;height:200px">1fr </div>
+        <div style="background-color: lightblue;height:200px">1fr</div>
+        <div style="background-color:lightpink;height:200px">1fr </div>
+    </div>
 </body>
 </html>
